# zero2production

./: Cargo.toml  Dockerfile  README.md  configuration.yaml
.github/workflows/: ci.yml
migrations/: 20220714020559_create_subscriptions_table.sql
routes/: health_check.rs
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
