[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.1.0"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.11"
serde = { version = "1.0.139", features = ["derive"]}
config = "0.11"
uuid = { version = "1.1.2", features = ["v4"] }
chrono = "0.4.15"
tracing = { version = "0.1.35" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"
secrecy = { version = "0.8", features = ["serde"]}
tracing-actix-web = "0.5"

[dev-dependencies]
once_cell = "1"

[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]
